
****  Fix MinGW compiler error, bug927, bug929. [Hans Tichelaar]

****  Fix .c files to be treated as .cpp, bug930. [Jonathon Donaldson]

****  Fix string-to-int space conversion, bug931. [Fabrizio Ferrandi]

****  Fix dpi imports inside generates. [Michael Tresidder]

****  Fix rounding in trace $timescale, bug946. [Frederic Requin]

****  Fix $fopen with SV string, bug947. [Sven Stucki]


* Verilator 3.874 2015-06-06

***   Add pkg-config .pc file, bug919. [Stefan Wallentowitz]

****  Fix installing missing manpages, bug908. [Ahmed El-Mahmoudy]

****  Fix sign extension in large localparams, bug910. [Mike Thyer]

****  Fix core dump in sync-async warnings, bug911. [Sebastian Dressler]

****  Fix truncation warning with -pins-bv, bug912. [Alfonso Martinez]

****  Fix Cygwin uint32 compile, bug914. [Matthew Barr]

****  Fix preprocessing stringified newline escapes, bug915. [Anton Rapp]

****  Fix part-select in constant function, bug916. [Andrew Bardsley]

****  Fix width extension on mis-width ports, bug918. [Patrick Maupin]

****  Fix width propagation on sized casts, bug925. [Jonathon Donaldson]

****  Fix MSVC++ compiler error, bug927. [Hans Tichelaar]


* Verilator 3.872 2015-04-05

***   Add VerilatedVcdFile to allow real-time waveforms, bug890. [HyungKi Jeong]

***   Add --clk and related optimizations, msg1533. [Jie Xu]

***   Fix order of C style arrays. [Duraid Madina]

****  Add --dump-treei-<srcfile>, bug894. [Jie Xu]

****  Fix comma-instantiations with parameters, bug884. [Franck Jullien]

****  Fix SystemC arrayed bit vectors, bug886. [David Poole]

****  Fix compile error on MinGW, bug887. [HyungKi Jeong]


* Verilator 3.870 2015-02-12

****  Suppress COMBDLY when inside always_latch, bug864. [Iztok Jeras]

****  Support cast operator with expression size, bug865. [Iztok Jeras]

****  Add warning on slice selection out of bounds, bug875. [Cong Van Nguyen].

****  Fix member select error broke in 3.868, bug867. [Iztok Jeras]
